force-app/main/default/objects/Creditor_Life_Matrix__mdt/Creditor_Life_Matrix__mdt.object-meta.xml
<CustomObject>
    <label>Creditor Life Matrix</label>
    <pluralLabel>Creditor Life Matrix</pluralLabel>
</CustomObject>