force-app/main/default/objects/Creditor_Life_Matrix__mdt/fields/X10__c.field-meta.xml
<CustomField>
    <fullName>X10__c</fullName>
    <label>10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>