force-app/main/default/objects/Creditor_Life_Matrix__mdt/fields/X1__c.field-meta.xml
<CustomField>
    <fullName>X1__c</fullName>
    <label>1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>