force-app/main/default/objects/Creditor_Life_Matrix__mdt/fields/X2_5__c.field-meta.xml
<CustomField>
    <fullName>X2_5__c</fullName>
    <label>2.5</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>